# wikimathextractor

./: .gitignore  README.md  extract.sh  postprocess.py  pyproject.toml  setup.py
wikimathextractor/: WikiMathExtractor.py  clean.py  extract.py
