[tool.poetry]
name = "wikimathextractor"
version = "0.1.0"
description = ""
authors = ["stktu <34226464+stktu@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "<=3.10.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
